# nbh

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
assets/: intro_to_latex.html  intro_to_latex.ipynb
src/nbh/: __main__.py  cli.py  lib.py
src/nbh/static/: cell.code.html  cell.markdown.html  index.html
tests/: test_cli.py  test_lib.py
tests/features/simple.html/: simple.html
tests/fixtures/: simple.ipynb  template.html
