[project]
name = "nbh"
version = "0.1.2"
description = "A simple notebook HTML renderer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [{name = "Fabrizio (Mistobaan) Milo", email = "misto~remove~this~baan@email.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Mistobaan/nbh"
Issues = "https://github.com/Mistobaan/nbh/issues"
Repository = "https://github.com/Mistobaan/nbh"
Changelog = "https://github.com/Mistobaan/nbh/blob/main/CHANGELOG.md"
Releases = "https://github.com/Mistobaan/nbh/releases"


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[project.scripts]
nbh = "nbh.cli:app"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  #"PTH",         # flake8-use-pathlib
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "PYI",         # flake8-pyi
  "S",           # flake8-bandit
]
ignore = [
  "PLR",    # Design related pylint codes
  "S101",   # Use of `assert` detected
  "SIM105", # Use `contextlib.suppress(...)`
  "T201",   # `print` found
  "RUF012", # Mutable class attributes should be annotated
  "UP031",  # Use format specifiers instead of percent format
]
unfixable = [
  "T201",   # Don't touch print statements
  "RUF100", # Don't touch noqa lines
  "F401",    # Unused imports
]


[tool.setuptools.packages.find]
where = ["./src"]
include = ["nbh*"]
